--- a/app/src/main/res/layout/item_reply_tail_reply.xml
+++ b/app/src/main/res/layout/item_reply_tail_reply.xml
@@ -2,17 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_reply"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
-    android:descendantFocusability="blocksDescendants"
     android:focusable="true"
     android:paddingStart="@dimen/dimen_20_10"
     android:paddingTop="2dp"
     android:paddingEnd="@dimen/dimen_20_10"
     android:paddingBottom="4dp"
-    tools:ignore="SmallSp,UseCompoundDrawables,RtlSymmetry">
+    tools:ignore="SmallSp,UseCompoundDrawables">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/item_reply_head"
@@ -64,23 +64,6 @@
             android:textColor="?attr/colorTitle"
             tools:text="UP name" />
 
-        <TextView
-            android:id="@+id/item_reply_up"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="4dp"
-            android:background="@drawable/shape_bg_reply_up"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
-            android:text="@string/reply_up"
-            android:textColor="@color/white"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -130,117 +113,38 @@
         android:layout_marginRight="2dp"
         app:etv_MaxLinesOnShrink="6" />
 
-    <LinearLayout
-        android:id="@+id/item_reply_reply_show"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/item_reply_text"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="2dp"
-        android:background="@drawable/layer_bg_reply_show"
-        android:orientation="vertical"
-        android:padding="4dp">
-
-        <TextView
-            android:id="@+id/item_reply_reply_show_1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:clickable="true"
-            android:ellipsize="end"
-            android:focusable="true"
-            android:maxLines="2"
-            android:textSize="12sp"
-            tools:text="Reply1" />
-
-        <TextView
-            android:id="@+id/item_reply_reply_show_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:ellipsize="end"
-            android:focusable="true"
-            android:maxLines="2"
-            android:textSize="12sp"
-            tools:text="Reply2" />
-
-        <TextView
-            android:id="@+id/item_reply_reply_show_3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:ellipsize="end"
-            android:focusable="true"
-            android:maxLines="2"
-            android:textSize="12sp"
-            tools:text="Reply3" />
-
-        <TextView
-            android:id="@+id/item_reply_reply_show_show"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:focusable="true"
-            android:textSize="12sp"
-            tools:text="Show" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/item_reply_up_like"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/item_reply_reply_show"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="2dp"
-        android:background="@drawable/layer_bg_reply_up_like"
-        android:drawablePadding="2dp"
-        android:paddingStart="5dp"
-        android:paddingTop="1px"
-        android:paddingBottom="1px"
-        android:text="@string/reply_like_up"
-        android:textColor="?android:attr/textColorHint"
-        android:textSize="11sp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/item_reply_up_like"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:baselineAligned="false"
-        android:gravity="end"
-        android:orientation="horizontal">
+        android:gravity="end">
 
-        <ImageView
-            android:id="@+id/item_reply_report"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
+        <TextView
+            android:id="@+id/item_reply_tail_apply"
+            android:layout_width="wrap_content"
+            android:layout_height="23dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/layer_bg_button_color"
             android:clickable="true"
-            android:contentDescription="@string/reply_description_report"
+            android:ellipsize="none"
             android:focusable="true"
-            android:padding="4dp"
-            android:src="@drawable/icon_report" />
-
-        <ImageView
-            android:id="@+id/item_reply_reply"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:clickable="true"
-            android:contentDescription="@string/reply_description_reply"
-            android:focusable="true"
-            android:padding="4dp"
-            android:src="@drawable/icon_reply" />
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:paddingStart="6dp"
+            android:paddingEnd="6dp"
+            android:singleLine="true"
+            android:text="@string/tail_reply_apply"
+            android:textColor="@color/white"
+            android:textSize="12sp" />
 
         <ImageView
             android:id="@+id/item_reply_dislike"
             android:layout_width="26dp"
             android:layout_height="26dp"
+            android:layout_toStartOf="@id/item_reply_like"
             android:clickable="true"
             android:contentDescription="@string/reply_description_dislike"
             android:focusable="true"
@@ -250,7 +154,8 @@
         <LinearLayout
             android:id="@+id/item_reply_like"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center_vertical"
@@ -272,7 +177,7 @@
                 android:gravity="center_vertical"
                 android:textSize="12sp" />
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
