--- a/app/src/main/res/layout/item_article_card_bangumi.xml
+++ b/app/src/main/res/layout/item_article_card_bangumi.xml
@@ -13,7 +13,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="74dp"
-        app:cardBackgroundColor="?attr/colorBackgroundColor"
+        app:cardBackgroundColor="?attr/colorCardViewBackground"
         app:cardCornerRadius="6dp"
         app:cardElevation="0dp">
 
@@ -103,7 +103,7 @@
                     android:paddingTop="1dp"
                     android:paddingEnd="4dp"
                     android:paddingBottom="1dp"
-                    android:text="番剧"
+                    android:text="@string/article_card_bangumi_name"
                     android:textColor="?attr/colorAccent"
                     android:textSize="10sp" />
 
